--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -87,20 +87,20 @@
         </div>
       </section>
       <section
-        class="flex gap-2 text-center md:text-start flex-col-reverse md:flex-row justify-center items-center bg-[#dfb253] text-white py-3"
+        class="flex gap-2 text-center md:text-start flex-col-reverse md:flex-row justify-between items-center bg-[#dfb253] text-white py-3"
       >
         <img
           src="assets/security.png"
           alt="This Platform has a Secure Registration"
-          class="w-full md:w-7/12"
+          class="w-full md:w-1/2"
         />
-        <article class="flex flex-col gap-3">
+        <article class="flex flex-col gap-3 w-full md:w-1/2">
           <h2 class="text-2xl font-mono">Secure Registration</h2>
           <p
-            class="text-xl font-serif leading-7 text-[#2a5c56] bg-[#dfb253] p-2"
+            class="text-xl font-serif leading-7 text-[#2a5c56] bg-[#dfb253] py-1"
           >
-            Your login and signup details are secure and encypted. We gurantee
-            you full security protection inasmuch as you do not compromise your
+            Your login and signup details are secure and encypted.<br>We gurantee
+            you full security protection inasmuch as<br> you do not compromise your
             privacy.
           </p>
         </article>
